--- a/3322.html
+++ b/3322.html
@@ -115,6 +115,10 @@
 				format of the message, order of the messages sent and received between two ends, actions taken on message transmission
 				and receipt
 			</p>
+			<hr>
+			<p>
+				<span class="semibold">DNS</span> translates human-readable domain names into the binary addresses used by the Internet Protocol
+			</p>
 		</div>
 	</body>
 </html>
