--- a/2396.html
+++ b/2396.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div class="page">
+		<div>
 			<h1>java.util.ArrayList</h1>
 			<p>
 				creation: <span class="semibold">var arrayList = new ArrayList&lt;Integer&gt;();</span>
