--- a/3322.html
+++ b/3322.html
@@ -268,6 +268,7 @@
 			<h1>CSS</h1>
 			<p>
 				Responsive web design: add tag &lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt; to HTML head;
+				CSS: @media only screen and (/* condition */) and (/* condition */) /* ... */ { /* styling */ }
 			</p>
 		</div>
 	</body>
